Update mobile view, top bar, colors, background, desktop picture

--- a/contacts.html
+++ b/contacts.html
@@ -30,15 +30,15 @@
     <a class="h1">Chats</a>
     <a class="text">
         <div class="card" onclick="open_url('https://matrix.to/#/@kostya_zer0:debilosempire.org')">
-            <a class="card-title" style="color: #8ce28b">Matrix</a>
+            <a class="card-title">Matrix</a>
             <a class="card-text">Talk to me in Matrix. Best way to contact.</a>
         </div>
         <div class="card" onclick="open_url('https://t.me/kostya_zer0')">
-            <a class="card-title" style="color: #8be2d2">Telegram</a>
+            <a class="card-title">Telegram</a>
             <a class="card-text">Talk to me in Telegram. Can be unreachable.</a>
         </div>
         <div class="card" onclick="copy('.ZΞRO#4731')">
-            <a class="card-title" style="color: #a48be2">Discord</a>
+            <a class="card-title">Discord</a>
             <a class="card-text">Talk to me on Discord. Proprietary 💀.</a>
         </div>
     </a>
@@ -48,7 +48,7 @@
     <a class="h1">Social</a>
     <a class="text">
         <div class="card" onclick="open_url('https://fedi.debilosempire.org/@kostya_zer0')">
-            <a class="card-title" style="color: #dce28b">Misskey</a>
+            <a class="card-title">Misskey</a>
             <a class="card-text">Take a look at my profile on Misskey instance.</a>
         </div>
     </a>
