--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="text">
             I use ArchLinux as my main OS, because Windows is too bloated and my machine runs slower on it.
             Also, I have compiled <u>linux-cachyos-bore</u> kernel for better performance and stability.
-            As desktop environment, I prefer to use KDE Plasma because of their extensibility and multifunctional customization using various plasmoids and themes.
+            As Desktop Environment I prefer to use Hyprland Wayland Compositor.
             Fish - my favorite shell. I love them for their user-friendly usage and functionality.
         </a>
         <img class="embed" src="imgs/desktop.png" >
@@ -46,9 +46,6 @@
     <div class="main">
         <a class="h1">Toolkit</a>
         <a class="text">
-            Usually, I use JetBrains software for development.
-            It's a Rider and WebStorm. First for C# and .NET, second for Web Development.
-            Also, I use IdeaVim plugin that adds Vim shortcuts to IDEA-based editors.
             For Python and Rust I use Neovim with configured plugins for better linting and diagnostics.
             Neovim is my favorite text and code editor.
             It is fully compatible with Vim plugins and has Lua support for better configuration.
