Update font and colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="text">
             I'm a 16 years old high school student who love open-source, Linux and related stuff, developing software and learning computer science.
             I develop programs in C#, Python and Rust.
-            In the past, I have used C# for development, but in 2023 I switched to Rust.
+            Usually, I prefer to use C# because I love .NET for they feature-rich standard library.
             I have learned C# in early 2019, and now I can code in Python and Rust.
             All in all, I like to create cool things that can be useful to someone! <br> <br>
 
