--- a/contacts.html
+++ b/contacts.html
@@ -47,9 +47,9 @@
 <div class="main">
     <a class="h1">Social</a>
     <a class="text">
-        <div class="card" onclick="open_url('https://fedi.debilosempire.org/@kostya_zer0')">
-            <a class="card-title">Misskey</a>
-            <a class="card-text">Take a look at my profile on Misskey instance.</a>
+        <div class="card" onclick="open_url('https://md.debilosempire.org/@kostya_zero')">
+            <a class="card-title">Mastodon</a>
+            <a class="card-text">Take a look at my profile on Mastodon instance.</a>
         </div>
     </a>
 </div>
